--- a/pages/19891.html
+++ b/pages/19891.html
@@ -315,21 +315,53 @@ margin-left: 0em;
 
 <p id="streicher_1991_semantics-of-type-theory"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#streicher_1991_semantics-of-type-theory">this reference</a>:</p>
 
-<pre><code>@book {streicher_1991_semantics-of-type-theory,
-    AUTHOR = {Streicher, Thomas},
-     TITLE = {Semantics of type theory},
-    SERIES = {Progress in Theoretical Computer Science},
-      NOTE = {Correctness, completeness and independence results,
-              With a foreword by Martin Wirsing},
- PUBLISHER = {Birkh\"{a}user Boston, Inc., Boston, MA},
-      YEAR = {1991},
-     PAGES = {xii+298},
-      ISBN = {0-8176-3594-7},
-   MRCLASS = {68Q55 (03B40 03B70 03F50 06B35 68Q65)},
-  MRNUMBER = {1134134},
-MRREVIEWER = {John C. Mitchell},
-       DOI = {10.1007/978-1-4612-0433-6},
-       URL = {https://doi.org/10.1007/978-1-4612-0433-6},
+<pre><code>@Book{streicher_1991_semantics-of-type-theory,
+  author       = {Streicher, Thomas},
+  title	       = {Semantics of type theory},
+  publisher    = {Birkh\"{a}user Boston, Inc., Boston, MA},
+  year	       = 1991,
+  series       = {Progress in Theoretical Computer Science},
+  note	       = {Correctness, completeness and independence results, With a foreword by Martin Wirsing},
+  pages	       = {xii+298},
+  isbn	       = {0-8176-3594-7},
+  mrclass      = {68Q55 (03B40 03B70 03F50 06B35 68Q65)},
+  mrnumber     = 1134134,
+  mrreviewer   = {John C. Mitchell},
+  doi	       = {10.1007/978-1-4612-0433-6},
+  url	       = {https://doi.org/10.1007/978-1-4612-0433-6}
+}</code></pre>
+
+<p><strong>V</strong></p>
+
+<p id="voevodsky_2016_mathematical-theory-of-type-theories"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#voevodsky_2016_mathematical-theory-of-type-theories">this reference</a>:</p>
+
+<pre><code>@Misc{voevodsky_2016_mathematical-theory-of-type-theories,
+  author       = {Voevodsky, Vladimir},
+  title	       = {Mathematical theory of type theories and the initiality conjecture},
+  year	       = 2016,
+  note	       = {Research proposal to the Templeton Foundation},
+  url	       = {https://www.math.ias.edu/Voevodsky/voevodsky-publications_abstracts.html#TempletonProposal}
+}</code></pre>
+
+<p id="voevodsky_2017_the-meta-theory-of-dependent-type-theories"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#voevodsky_2017_the-meta-theory-of-dependent-type-theories">this reference</a>:</p>
+
+<pre><code>@Misc{voevodsky_2017_the-meta-theory-of-dependent-type-theories,
+  author       = {Voevodsky, Vladimir},
+  title	       = {The meta-theory of dependent type theories},
+  howpublished = {Video},
+  year	       = 2017,
+  note	       = {Members Seminar, Institute for Advanced Study, Princeton, NJ, USA, February 27, 2017},
+  url	       = {https://video.ias.edu/membsem/2017/0227-VladimirVoevodsky}
+}</code></pre>
+
+<p id="voevodsky_2017_models-interpretations-and-the-initiality-conjectures"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#voevodsky_2017_models-interpretations-and-the-initiality-conjectures">this reference</a>:</p>
+
+<pre><code>@Misc{voevodsky_2017_models-interpretations-and-the-initiality-conjectures,
+  author       = {Voevodsky, Vladimir},
+  title	       = {Models, interpretations and the initiality conjectures},
+  year	       = 2017,
+  note	       = {Lecture at the special session on category theory and type theory in honor of Per Martin-L{\"o}f on his 75th birthday, August 17--19, 2017},
+  url	       = {https://www.math.ias.edu/Voevodsky/voevodsky-publications_abstracts.html#logcoll-1}
 }</code></pre>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
@@ -337,7 +369,7 @@ MRREVIEWER = {John C. Mitchell},
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 02:38:59.
+  Last revised on October 30, 2018 at 03:52:16.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
