--- a/pages/2682.html
+++ b/pages/2682.html
@@ -847,7 +847,13 @@ margin-left: 0em;
 <p>Similarly</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Big Numbers in String Theory</em> (<a href="http://arxiv.org/abs/1601.02462">arXiv:1601.02462</a>)</li>
+<li id="Schellekens08">
+<p><a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>The Emperor’s Last Clothes?</em>, Rept.Prog.Phys.71:072201,2008 (<a href="https://arxiv.org/abs/0807.3249">arXiv:0807.3249</a>)</p>
+</li>
+
+<li id="Schellekens16">
+<p><a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Big Numbers in String Theory</em> (<a href="http://arxiv.org/abs/1601.02462">arXiv:1601.02462</a>)</p>
+</li>
 </ul>
 
 <p>The articles <a href="#LercheLustSchellekens86">Lerche-Lüst-Schellekens 86</a>, <a href="#LercheLustSchellekens87">Lerche-Lüst-Schellekens 87</a>, and the speech <a href="#Schellekens98">Schellekens 98</a>, did not cause much of excitement then. Also they did not discuss <a class="existingWikiWord" href="/nlab/show/moduli+stabilization">moduli stabilization</a>, which could still have been thought to reduce the number of vacua. Excitement was only later caused instead by more vague discussion of flux compactification vacua with moduli stabilization in type IIB string theory:</p>
@@ -1003,14 +1009,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 10:44:18.
+  Last revised on October 30, 2018 at 03:06:42.
   See the <a href="https://ncatlab.org/nlab/history/landscape of string theory vacua" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/51" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(51 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/landscape of string theory vacua/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
