--- a/pages/19890.html
+++ b/pages/19890.html
@@ -311,6 +311,26 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
+<p><strong>K</strong></p>
+
+<dl>
+<dt id="{kapulkin_2012_the-simplicial-model-of-univalent-foundations"> <a class="existingWikiWord" href="/nlab/show/Krzysztof+Kapulkin">Krzysztof Kapulkin</a>, <span class="newWikiWord">Peter Lefanu Lumsdaine<a href="/nlab/new/Peter+Lefanu+Lumsdaine">?</a></span>, and <a class="existingWikiWord" href="/nlab/show/Vladimir+Voevodsky">Vladimir Voevodsky</a>, <em>The simplicial model of univalent foundations (after Voevodsky)</em></dt>
+
+<dd>
+<p><a href="https://arxiv.org/abs/1211.2851">arXiv:1211.2851</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#{kapulkin_2012_the-simplicial-model-of-univalent-foundations">BibTeX</a></p>
+
+<p>Revised September, 2018</p>
+
+<p>This book was suggested by Mike Shulman, in an <a href="https://nforum.ncatlab.org/discussion/8904/a-communal-proof-of-an-initiality-theorem/?Focus=71137#Comment_71137">nForum message</a>, as a primary reference for the <a class="existingWikiWord" href="/nlab/show/Initiality+Project">Initiality Project</a>.</p>
+
+<p>Conjeture 1.2.9 in the article says,</p>
+
+<blockquote>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>T</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{T}</annotation></semantics></math> be the type theory given by the structural rules of Section A.1, plus any combination of the logical rules of Sections A.2, A.3. Then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi><mstyle mathvariant="bold"><mi>T</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathcal{C}{\mathbf{T}}</annotation></semantics></math> is initial among contextual categories with the correspondingly-named extra structure.</p>
+</blockquote>
+</dd>
+</dl>
+
 <p><strong>S</strong></p>
 
 <dl>
@@ -335,7 +355,9 @@ margin-left: 0em;
 
 <p><a href="https://www.math.ias.edu/Voevodsky/voevodsky-publications_abstracts.html#TempletonProposal">URL</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#voevodsky_2016_mathematical-theory-of-type-theories">BibTeX</a></p>
 </dd>
+</dl>
 
+<dl>
 <dt id="voevodsky_2017_the-meta-theory-of-dependent-type-theories"> <a class="existingWikiWord" href="/nlab/show/Vladimir+Voevodsky">Vladimir Voevodsky</a>, <em>The meta-theory of dependent type theories</em></dt>
 
 <dd>
@@ -343,7 +365,9 @@ margin-left: 0em;
 
 <p><a href="https://video.ias.edu/membsem/2017/0227-VladimirVoevodsky">URL</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#voevodsky_2017_the-meta-theory-of-dependent-type-theories">BibTeX</a></p>
 </dd>
+</dl>
 
+<dl>
 <dt id="voevodsky_2017_models-interpretations-and-the-initiality-conjectures"> <a class="existingWikiWord" href="/nlab/show/Vladimir+Voevodsky">Vladimir Voevodsky</a>, <em>Models, interpretations and the initiality conjectures</em></dt>
 
 <dd>
@@ -360,14 +384,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 03:43:26.
+  Last revised on October 30, 2018 at 04:58:24.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - References" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - References/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
