--- a/pages/19891.html
+++ b/pages/19891.html
@@ -311,6 +311,18 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
+<p><strong>K</strong></p>
+
+<p id="kapulkin_2012_the-simplicial-model-of-univalent-foundations"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#kapulkin_2012_the-simplicial-model-of-univalent-foundations">this reference</a>:</p>
+
+<pre><code>@Misc{kapulkin_2012_the-simplicial-model-of-univalent-foundations,
+  author       = {Kapulkin, Krzysztof and Lumsdaine, Peter LeFanu},
+  title	       = {The simplicial model of univalent foundations (after Voevodsky)},
+  year	       = 2012,
+  note	       = {Revised 2018 as v5},
+  eprint       = {1211.2851}
+}</code></pre>
+
 <p><strong>S</strong></p>
 
 <p id="streicher_1991_semantics-of-type-theory"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#streicher_1991_semantics-of-type-theory">this reference</a>:</p>
@@ -369,14 +381,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 04:11:46.
+  Last revised on October 30, 2018 at 05:23:06.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - BibTeX database/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
