--- a/pages/19892.html
+++ b/pages/19892.html
@@ -693,7 +693,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The application of <a class="existingWikiWord" href="/nlab/show/synthetic+mathematics">synthetic mathematics</a> to probability theory. This is related to <a class="existingWikiWord" href="/nlab/show/measurable+locales">measurable locales</a>.</p>
+<p>The application of <a class="existingWikiWord" href="/nlab/show/synthetic+mathematics">synthetic mathematics</a> to <a class="existingWikiWord" href="/nlab/show/probability+theory">probability theory</a>. This is related to <a class="existingWikiWord" href="/nlab/show/measurable+locales">measurable locales</a>.</p>
 
 <h2 id="references">References</h2>
 
@@ -706,14 +706,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 30, 2018 at 08:49:10.
+  Last revised on October 30, 2018 at 09:38:09.
   See the <a href="https://ncatlab.org/nlab/history/synthetic probability theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/synthetic+probability+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/synthetic+probability+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/synthetic+probability+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/synthetic+probability+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/synthetic+probability+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/synthetic probability theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
