--- a/pages/19719.html
+++ b/pages/19719.html
@@ -352,6 +352,8 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Uniqueness">Uniqueness of the interpretation functor</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+References">References</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+BibTeX+database">BibTeX database</a></li>
 </ul>
 
 <h3 id="by_type_former">By type former</h3>
@@ -391,7 +393,7 @@ margin-left: 0em;
 
 <li>Prove local totality for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi><mo>,</mo><mi>λ</mi><mo>,</mo><mi>App</mi></mrow><annotation encoding="application/x-tex">\Pi,\lambda,App</annotation></semantics></math> at <span class="newWikiWord">Initiality Project - Totality - Pi-types<a href="/nlab/new/Initiality+Project+-+Totality+-+Pi-types">?</a></span>.</li>
 
-<li>Create, update and maintain a bibliography (<a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+References">Initiality Project - References</a>) for the project and link it to existing material. (<a class="existingWikiWord" href="/nlab/show/Ali+Caglayan">Ali Caglayan</a>)</li>
+<li>Create, update and maintain a bibliography (<a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+References">Initiality Project - References</a>), (<a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+BibTeX+database">Initiality Project - BibTeX database</a> for the project and link it to existing material.</li>
 </ul>
 
 <h2 id="background_links">Background links</h2>
@@ -409,14 +411,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 03:49:46.
+  Last revised on October 30, 2018 at 12:08:52.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
