--- a/pages/19891.html
+++ b/pages/19891.html
@@ -345,6 +345,18 @@ margin-left: 0em;
 
 <p><strong>V</strong></p>
 
+<p id="voevodsky_2015_from-syntax-to-semantics-of-dependent-type-theories"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#voevodsky_2015_from-syntax-to-semantics-of-dependent-type-theories">this reference</a>:</p>
+
+<pre><code>@Misc{voevodsky_2015_from-syntax-to-semantics-of-dependent-type-theories,
+  author       = {Voevodsky, Vladimir},
+  title        = {From syntax to semantics of dependent type theories --- formalized},
+  howpublished = {Slides},
+  year         = 2015,
+  note         = {Lecture at RDP 2015, Warsaw, June 30, 2015},
+  url          = {https://www.math.ias.edu/vladimir/sites/math.ias.edu.vladimir/files/2015_06_30_RDP.pdf}
+}
+</code></pre>
+
 <p id="voevodsky_2016_mathematical-theory-of-type-theories"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#voevodsky_2016_mathematical-theory-of-type-theories">this reference</a>:</p>
 
 <pre><code>@Misc{voevodsky_2016_mathematical-theory-of-type-theories,
@@ -381,14 +393,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 06:06:03.
+  Last revised on October 30, 2018 at 15:39:14.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - BibTeX database/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
