--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -500,7 +500,7 @@ margin-left: 0em;
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><mo>⊤</mo></mtd> <mtd><mo>⊢</mo><mo stretchy="false">(</mo><msub><mi>g</mi> <mi>i</mi></msub><msub><mi>g</mi> <mi>j</mi></msub><mo stretchy="false">)</mo><mi>u</mi><mo>=</mo><msub><mi>g</mi> <mi>i</mi></msub><mo stretchy="false">(</mo><msub><mi>g</mi> <mi>j</mi></msub><mi>u</mi><mo stretchy="false">)</mo><mspace width="1em"></mspace><mtext>for all</mtext><mspace width="thickmathspace"></mspace><msub><mi>g</mi> <mi>i</mi></msub><mo>,</mo><msub><mi>g</mi> <mi>j</mi></msub></mtd></mtr> <mtr><mtd><mo>⊤</mo></mtd> <mtd><mo>⊢</mo><mo>∃</mo><mi>u</mi><mspace width="thickmathspace"></mspace><mi>u</mi><mi>ϵ</mi><mi>U</mi><mspace width="1em"></mspace><mtext>(U is inhabited)</mtext></mtd></mtr> <mtr><mtd><msub><mi>g</mi> <mi>i</mi></msub><mi>u</mi><mo>=</mo><msub><mi>g</mi> <mi>j</mi></msub><mi>u</mi></mtd> <mtd><mo>⊢</mo><mo>⊥</mo><mspace width="1em"></mspace><mtext>for all pairs</mtext><mspace width="thickmathspace"></mspace><msub><mi>g</mi> <mi>i</mi></msub><mo>≠</mo><msub><mi>g</mi> <mi>j</mi></msub><mspace width="1em"></mspace><mtext>(G acts freely)</mtext></mtd></mtr> <mtr><mtd><mo>⊤</mo></mtd> <mtd><mo>⊢</mo><mo>∃</mo><mi>x</mi><munder><mo lspace="thinmathspace" rspace="thinmathspace">⋁</mo> <mrow><mi>g</mi><mo>∈</mo><mi>G</mi></mrow></munder><mi>gx</mi><mo>=</mo><mi>y</mi><mspace width="1em"></mspace><mtext>(G acts transitively)</mtext><mspace width="1em"></mspace><mo>.</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
 \begin{aligned}
 \top &amp; \vdash (g_i g_j)u=g_i(g_j u)\quad\text{for all}\; g_i,g_j
-\\ 
+\\
 \top&amp;\vdash \exists u\; u\epsilon U \quad\text{(U is inhabited)}
 \\
 g_{i}u = g_{j}u &amp;\vdash \bot\quad \text{for all pairs}\;g_i\neq g_j\quad\text{(G acts freely)}
@@ -552,10 +552,6 @@ g_{i}u = g_{j}u &amp;\vdash \bot\quad \text{for all pairs}\;g_i\neq g_j\quad\tex
 <ul>
 <li id="MM94"><a class="existingWikiWord" href="/nlab/show/Saunders+Mac+Lane">S. Mac Lane</a>, <a class="existingWikiWord" href="/nlab/show/I.+Moerdijk">Ieke Moerdijk</a>, <em><a class="existingWikiWord" href="/nlab/show/Sheaves+in+Geometry+and+Logic">Sheaves in Geometry and Logic</a></em> , Springer Heidelberg 1994.</li>
 </ul>
-
-<p><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+BibTeX+database">Initiality Project - BibTeX database</a></p>
-
-<p><a class="existingWikiWord" href="/nlab/show/Thomas+Streicher">Thomas Streicher</a></p>
 <div class="footnotes"><hr /><ol><li id="fn:1">
 <p>Looking at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝕋</mi> <mi>G</mi></msub></mrow><annotation encoding="application/x-tex">\mathbb{T}_G</annotation></semantics></math> it seems reasonable to conjecture that the toposes of <em>finite</em> group actions correspond precisely to the classifying toposes of the finitely presentable complete Boolean theories of presheaf type i.e. those with finitely many function symbols and a finite list of axioms. <a href="#fnref:1" rev="footnote">↩</a></p>
 </li></ol></div></body></html>
@@ -564,14 +560,14 @@ g_{i}u = g_{j}u &amp;\vdash \bot\quad \text{for all pairs}\;g_i\neq g_j\quad\tex
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 01:58:00.
+  Last revised on October 30, 2018 at 16:58:42.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1709" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1709 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1710" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1710 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
