--- a/pages/19890.html
+++ b/pages/19890.html
@@ -310,9 +310,7 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
-<p><strong>K</strong></p>
-
+<body><p id="k" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">K</p>
 <dl>
 <dt id="kapulkin_2012_the-simplicial-model-of-univalent-foundations"> <a class="existingWikiWord" href="/nlab/show/Krzysztof+Kapulkin">Krzysztof Kapulkin</a> and <a class="existingWikiWord" href="/nlab/show/Peter+LeFanu+Lumsdaine">Peter LeFanu Lumsdaine</a>, <em>The simplicial model of univalent foundations (after Voevodsky)</em></dt>
 
@@ -334,9 +332,7 @@ margin-left: 0em;
 </blockquote>
 </dd>
 </dl>
-
-<p><strong>S</strong></p>
-
+<p id="s" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">S</p>
 <dl>
 <dt id="streicher_1991_semantics-of-type-theory"> <a class="existingWikiWord" href="/nlab/show/Thomas+Streicher">Thomas Streicher</a>, <em>Semantics of type theory</em>, Correctness, completeness and independence results</dt>
 
@@ -348,9 +344,7 @@ margin-left: 0em;
 <p>This book was suggested by Mike Shulman, in an <a href="https://nforum.ncatlab.org/discussion/8904/a-communal-proof-of-an-initiality-theorem/?Focus=71137#Comment_71137">nForum message</a>, as a primary reference for the <a class="existingWikiWord" href="/nlab/show/Initiality+Project">Initiality Project</a>.</p>
 </dd>
 </dl>
-
-<p><strong>V</strong></p>
-
+<p id="v" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">V</p>
 <dl>
 <dt id="voevodsky_2015_hott-is-not_an-interpretation-of-mltt-into-abstract-homotopy-theory"> <a class="existingWikiWord" href="/nlab/show/Vladimir+Voevodsky">Vladimir Voevodsky</a>, <em>HoTT is not an interpretation of MLTT into abstract homotopy theory</em></dt>
 
@@ -412,14 +406,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 15:58:36.
+  Last revised on October 30, 2018 at 16:50:01.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - References" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - References/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
