--- a/pages/19719.html
+++ b/pages/19719.html
@@ -341,7 +341,7 @@ margin-left: 0em;
 
 <li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Partial+Interpretation">Partial interpretation function</a></li>
 
-<li><span class="newWikiWord">Preservation of Substitution<a href="/nlab/new/Initiality+Project+-+Substitution">?</a></span></li>
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Substitution">Preservation of Substitution</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Totality">Totality of the interpretation</a></li>
 
@@ -375,7 +375,7 @@ margin-left: 0em;
 
 <li>Define <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi></mrow><annotation encoding="application/x-tex">\Pi</annotation></semantics></math>-type structure on a CwF in <span class="newWikiWord">Initiality Project - Semantics - Pi-types<a href="/nlab/new/Initiality+Project+-+Semantics+-+Pi-types">?</a></span>.</li>
 
-<li>Write out the equality rules at <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory">Initiality Project - Type Theory</a>.</li>
+<li>Write out the equality rules at <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory">Initiality Project - Type Theory</a> (<span class="newWikiWord">Kenji Maillard<a href="/nlab/new/Kenji+Maillard">?</a></span>).</li>
 
 <li>Define signatures to give arities to constants, and write out the constant rules at <a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory">Initiality Project - Type Theory</a>.</li>
 
@@ -411,14 +411,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 12:08:52.
+  Last revised on October 31, 2018 at 05:44:40.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/42" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(42 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
