--- a/pages/18070.html
+++ b/pages/18070.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_17" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -850,6 +850,34 @@ margin-left: 0em;
 <p>in this case.</p>
 </div>
 
+<p>A slight variation of the definition is sometimes useful:</p>
+
+<div class="num_defn" id="ConfigurationSpaceOfDisks">
+<h6 id="definition_3">Definition</h6>
+
+<p><strong>(configuration space of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(X)</annotation></semantics></math>-disks)</strong></p>
+
+<p>In the situation of Def. <a class="maruku-ref" href="#ConfigurationSpaceOfParticleswithLabels"></a>, with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/manifold">manifold</a> of <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">dim(X) \in \mathbb{N}</annotation></semantics></math></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>DiskConf</mi><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo>⟶</mo><mi>Conf</mi><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  DiskConf(X,A)
+  \longrightarrow
+  Conf(X,A)
+
+</annotation></semantics></math></div>
+<p>be, on the left, the labeled configuration space of joint <a class="existingWikiWord" href="/nlab/show/embedding+of+smooth+manifolds">embeddings</a> of <a class="existingWikiWord" href="/nlab/show/tuples">tuples</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>(</mo><msup><mi>D</mi> <mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow></msup><mover><mo>↪</mo><mrow><msub><mi>ι</mi> <mi>i</mi></msub></mrow></mover><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
+  \left(
+    D^{dim(X)} \overset{ \iota_i }{\hookrightarrow}
+  \right)
+
+</annotation></semantics></math></div>
+<p>of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(X)</annotation></semantics></math>-dimensional disks/<a class="existingWikiWord" href="/nlab/show/closed+balls">closed balls</a> into <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>, with identifications as in Def. <a class="maruku-ref" href="#ConfigurationSpaceOfParticleswithLabels"></a> (in particular the disks centered at the basepoint are quotiented out) and with the comparison map sending each disk to its center.</p>
+
+<p>This map is evidently a <a class="existingWikiWord" href="/nlab/show/deformation+retraction">deformation retraction</a> hence in particular a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a>.</p>
+</div>
+
+<p>spring</p>
+
 <h2 id="properties">Properties</h2>
 
 <h3 id="CocycleSpacesAndScanningMap">Cocycle spaces and the Scanning map</h3>
@@ -867,7 +895,7 @@ margin-left: 0em;
 </ol>
 
 <div class="num_defn" id="TheSpaceOfSections">
-<h6 id="definition_3">Definition</h6>
+<h6 id="definition_4">Definition</h6>
 
 <p>Write</p>
 <div class="maruku-equation" id="eq:SPaceOfSections"><span class="maruku-eq-number">(2)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>Γ</mi><mo>˜</mo></mover> <mi>X</mi></msub><mrow><mo>(</mo><msubsup><mi>S</mi> <mi>X</mi> <mrow><mi>T</mi><mi>X</mi></mrow></msubsup><msub><mo>∧</mo> <mi>X</mi></msub><mi>A</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>⊂</mo><mspace width="thickmathspace"></mspace><msub><mi>Γ</mi> <mi>X</mi></msub><mrow><mo>(</mo><msubsup><mi>S</mi> <mi>X</mi> <mrow><mi>T</mi><mi>X</mi></mrow></msubsup><msub><mo>∧</mo> <mi>X</mi></msub><mi>A</mi><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
@@ -888,7 +916,7 @@ margin-left: 0em;
 </div>
 
 <div class="num_defn" id="ScanningMap">
-<h6 id="definition_4">Definition</h6>
+<h6 id="definition_5">Definition</h6>
 
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a>)</strong></p>
 
@@ -901,10 +929,44 @@ margin-left: 0em;
   \right)
 
 </annotation></semantics></math></div>
-<p>from the configuration space (Def. <a class="maruku-ref" href="#ConfigurationSpaceOfParticleswithLabels"></a>) to the space of sections (Def <a class="maruku-ref" href="#TheSpaceOfSections"></a>) given by …</p>
+<p>from the configuration space (Def. <a class="maruku-ref" href="#ConfigurationSpaceOfParticleswithLabels"></a>) to the space of sections (Def <a class="maruku-ref" href="#TheSpaceOfSections"></a>) defined as follows:</p>
+
+<p>First, in the special case that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>=</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>≃</mo><msup><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>)</mo></mrow> <mo>*</mo></msup></mrow><annotation encoding="application/x-tex">X = S^n \simeq \left( \mathbb{R}^n\right)^\ast</annotation></semantics></math> so that the space of sections</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>Γ</mi><mo>˜</mo></mover> <mi>X</mi></msub><mrow><mo>(</mo><msubsup><mi>S</mi> <mi>X</mi> <mrow><mi>T</mi><mi>X</mi></mrow></msubsup><msub><mo>∧</mo> <mi>X</mi></msub><mi>A</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">
+  \widetilde \Gamma_X\left(
+     S_X^{T X}\wedge_X A  
+  \right)
+  \;\simeq\;
+  \Omega^n S^n
+
+</annotation></semantics></math></div>
+<p>is the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-fold <a class="existingWikiWord" href="/nlab/show/loop+space">loop space</a> of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere, consider the <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous function</a> out of the configuration space of disks (Def. <a class="maruku-ref" href="#ConfigurationSpaceOfDisks"></a>)</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mover><mo>⟵</mo><mo>≃</mo></mover><mi>DiskConf</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow></mrow></mover><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">
+  Conf(S^n,A)
+  \overset{\simeq}{\longleftarrow}
+  DiskConf(S^n,A)
+  \overset{  }{\longrightarrow}
+  \Omega^n S^n
+
+</annotation></semantics></math></div>
+<p>which takes an <a class="existingWikiWord" href="/nlab/show/n-tuple">n-tuple</a> of disks in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> to the element in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup><mo>=</mo><mo stretchy="false">{</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>→</mo><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">\Omega^n S^n =\{S^n \to S^n\}</annotation></semantics></math> which is the <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous function</a> that</p>
+
+<ol>
+<li>
+<p>takes every point in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>=</mo><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">X = S^n</annotation></semantics></math> not in the <a class="existingWikiWord" href="/nlab/show/interior">interior</a> of one of the embedded disks to the basepoint;</p>
+</li>
+
+<li>
+<p>takes the interior of embedded disks <a class="existingWikiWord" href="/nlab/show/homeomorphism">homeomorphically</a> to the <a class="existingWikiWord" href="/nlab/show/complement">complement</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup><mo>∖</mo><mo stretchy="false">{</mo><mo>*</mo><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">S^n \setminus \{\ast\}</annotation></semantics></math> of the basepoint.</p>
+</li>
+</ol>
+
+<p>In words, this map identifies a ball-shaped neighbourhood of every point in a configuration of points with the coefficient sphere, the <a class="existingWikiWord" href="/nlab/show/boundary">boundary</a> of the neighbouthood mapping to the basepoint, and then glues all these identifications together at their common basepoint.</p>
+
+<p>For general <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> the scanning map is locally like this, globalized in the evident way (…).</p>
 </div>
 
-<p>(<a href="#Segal73">Segal 73</a>, <a href="#McDuff75">McDuff 75, p. 94, 95</a>)</p>
+<p>(<a href="#Segal73">Segal 73, section 3</a>, <a href="#McDuff75">McDuff 75, p. 94, 95</a>)</p>
 
 <div class="num_example">
 <h6 id="example_2">Example</h6>
@@ -944,7 +1006,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div></div>
 
-<p>This is due to (<a href="#McDuff75">McDuff 75</a>), for review see (<a href="#Boedigheimer87">Bödigheimer 87, Prop. 2</a>, <a href="#FrancisLect17">Francis Lecture 17, Theorem 1.1</a>).</p>
+<p>This is due to (<a href="#McDuff75">McDuff 75</a>), following <a href="#Segal73">Segal 73</a>, for review see (<a href="#Boedigheimer87">Bödigheimer 87, Prop. 2</a>, <a href="#FrancisLect17">Francis Lecture 17, Theorem 1.1</a>).</p>
 
 <p>(As discussed there, the statement holds also under somewhat weaker assumptions than stated here.)</p>
 
@@ -1052,7 +1114,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div></div>
 
-<p>This is originally (<a href="#Segal73">Segal 73, theorem 3</a>). It follows via Remark <a class="maruku-ref" href="#ConfigurationSpacesAndCocyclesForTwistedReducedCohomotopy"></a> as a special case of Prop. <a class="maruku-ref" href="#ScanningMapEquivalence"></a> of <a href="#McDuff75">McDuff 75</a>, for reviw see e.g. <a href="#Boedigheimer87">Bödigheimer 87, Example 13</a>.</p>
+<p>This is originally due to <a href="#May72">May 72</a>, reobtained in <a href="#Segal73">Segal 73, theorem 3</a>. It follows via Remark <a class="maruku-ref" href="#ConfigurationSpacesAndCocyclesForTwistedReducedCohomotopy"></a> as a special case of Prop. <a class="maruku-ref" href="#ScanningMapEquivalence"></a> of <a href="#McDuff75">McDuff 75</a>, for review see e.g. <a href="#Boedigheimer87">Bödigheimer 87, Example 13</a>.</p>
 
 <h3 id="classifying_space_of_the_symmetric_group">Classifying space of the symmetric group</h3>
 
@@ -1117,7 +1179,13 @@ margin-left: 0em;
 <p>The <a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> and hence the relation of configuration spaces to <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> goes back to</p>
 
 <ul>
-<li id="Segal73"><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Configuration-spaces and iterated loop-spaces</em>, Invent. Math. <strong>21</strong> (1973), 213–221. MR 0331377 (<a href="http://dodo.pdmi.ras.ru/~topology/books/segal.pdf">pdf</a>)</li>
+<li id="May72">
+<p><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>The geometry of iterated loop spaces</em>, Springer 1972</p>
+</li>
+
+<li id="Segal73">
+<p><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Configuration-spaces and iterated loop-spaces</em>, Invent. Math. <strong>21</strong> (1973), 213–221. MR 0331377 (<a href="http://dodo.pdmi.ras.ru/~topology/books/segal.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>where it is considered for point in Euclidean spaces without labels (“electric field map”). Generalization of these constructions and results to more general spaces and to points with labels is due to</p>
@@ -1189,14 +1257,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 31, 2018 at 03:10:52.
+  Last revised on October 31, 2018 at 05:45:33.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space (mathematics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
