--- a/pages/19870.html
+++ b/pages/19870.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9184/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9184/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -325,22 +325,38 @@ margin-left: 0em;
 </annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>,</mo><mi>y</mi><mo>:</mo><mi>A</mi><mo>⊢</mo><msup><mi>App</mi> <mrow><mi>x</mi><mo>:</mo><mi>A</mi><mo>.</mo><mi>B</mi></mrow></msup><mo stretchy="false">(</mo><mi>M</mi><mo>,</mo><mi>y</mi><mo stretchy="false">)</mo><mo>≡</mo><msup><mi>App</mi> <mrow><mi>x</mi><mo>:</mo><mi>A</mi><mo>.</mo><mi>B</mi></mrow></msup><mo stretchy="false">(</mo><mi>M</mi><mo>′</mo><mo>,</mo><mi>y</mi><mo stretchy="false">)</mo><mo>:</mo><mi>B</mi><mo stretchy="false">[</mo><mi>y</mi><mo stretchy="false">/</mo><mi>x</mi><mo stretchy="false">]</mo></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mi>M</mi><mo>≡</mo><mi>M</mi><mo>′</mo><mo>:</mo><mi>Π</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo stretchy="false">)</mo><mo>.</mo><mi>B</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">
 \frac{\Gamma, y:A \vdash App^{x:A.B}(M,y) \equiv App^{x:A.B}(M',y) : B[y/x]}{\Gamma \vdash M \equiv M' : \Pi(x:A).B }
 
-</annotation></semantics></math></div>
-<p>TODO: Congruence rules for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi><mo>,</mo><mi>λ</mi><mo>,</mo><mi>App</mi></mrow><annotation encoding="application/x-tex">\Pi, \lambda, App</annotation></semantics></math>.</p>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
+</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>A</mi><mo>≡</mo><mi>A</mi><mo>′</mo><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>⊢</mo><mi>B</mi><mo>≡</mo><mi>B</mi><mo>′</mo></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mi>Π</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo stretchy="false">)</mo><mi>B</mi><mo>≡</mo><mi>Π</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>′</mo><mo stretchy="false">)</mo><mi>B</mi><mo>′</mo></mrow></mfrac></mrow><annotation encoding="application/x-tex">
+\frac{\Gamma \vdash A \equiv A' \qquad \Gamma, x:A \vdash B \equiv B'}{\Gamma \vdash \Pi(x:A)B \equiv \Pi(x:A')B'}
+
+</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>A</mi><mo>≡</mo><mi>A</mi><mo>′</mo><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>⊢</mo><mi>B</mi><mo>≡</mo><mi>B</mi><mo>′</mo><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>⊢</mo><mi>M</mi><mo>≡</mo><mi>M</mi><mo>′</mo><mo>:</mo><mi>B</mi></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mi>λ</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>.</mo><mi>B</mi><mo stretchy="false">)</mo><mo>.</mo><mi>M</mi><mo>≡</mo><mi>λ</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>′</mo><mo>.</mo><mi>B</mi><mo>′</mo><mo stretchy="false">)</mo><mo>.</mo><mi>M</mi><mo>′</mo><mo>:</mo><mi>Π</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo stretchy="false">)</mo><mo>.</mo><mi>B</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{
+   \Gamma \vdash A \equiv A' \qquad
+   \Gamma, x:A \vdash B \equiv B' \qquad
+   \Gamma, x:A \vdash M \equiv M' : B
+}
+{\Gamma \vdash \lambda(x:A.B).M \equiv \lambda(x:A'.B').M' : \Pi(x:A).B}
+
+</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>A</mi><mo>≡</mo><mi>A</mi><mo>′</mo><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>⊢</mo><mi>B</mi><mo>≡</mo><mi>B</mi><mo>′</mo><mspace width="2em"></mspace><mi>Γ</mi><mo>⊢</mo><mi>M</mi><mo>≡</mo><mi>M</mi><mo>′</mo><mo>:</mo><mi>Π</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo stretchy="false">)</mo><mi>B</mi><mspace width="2em"></mspace><mi>Γ</mi><mo>⊢</mo><mi>N</mi><mo>≡</mo><mi>N</mi><mo>′</mo><mo>:</mo><mi>A</mi></mrow><mrow><mi>Γ</mi><mo>⊢</mo><msup><mi>App</mi> <mrow><mi>x</mi><mo>:</mo><mi>A</mi><mo>.</mo><mi>B</mi></mrow></msup><mo stretchy="false">(</mo><mi>M</mi><mo>,</mo><mi>N</mi><mo stretchy="false">)</mo><mo>≡</mo><msup><mi>App</mi> <mrow><mi>x</mi><mo>:</mo><mi>A</mi><mo>′</mo><mo>.</mo><mi>B</mi><mo>′</mo></mrow></msup><mo stretchy="false">(</mo><mi>M</mi><mo>′</mo><mo>,</mo><mi>N</mi><mo>′</mo><mo stretchy="false">)</mo><mo>:</mo><mi>B</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">/</mo><mi>x</mi><mo stretchy="false">]</mo></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{
+   \Gamma \vdash A \equiv A'              \qquad
+   \Gamma, x:A \vdash B \equiv B'         \qquad 
+   \Gamma \vdash M \equiv M' : \Pi(x:A)B  \qquad 
+   \Gamma \vdash N \equiv N' : A
+}
+{\Gamma \vdash App^{x:A.B}(M, N) \equiv App^{x:A'.B'}(M', N') : B[N/x]}
+
+</annotation></semantics></math></div><div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 05:53:21.
+  Last revised on October 31, 2018 at 05:01:18.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Type Theory - Pi-types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Type+Theory+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Type+Theory+-+Pi-types/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Type+Theory+-+Pi-types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Type+Theory+-+Pi-types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+Type+Theory+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Type+Theory+-+Pi-types/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Type+Theory+-+Pi-types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Type+Theory+-+Pi-types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Type Theory - Pi-types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
