--- a/pages/18070.html
+++ b/pages/18070.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_21" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -932,20 +932,20 @@ margin-left: 0em;
 <p>from the configuration space (Def. <a class="maruku-ref" href="#ConfigurationSpaceOfParticleswithLabels"></a>) to the space of sections (Def <a class="maruku-ref" href="#TheSpaceOfSections"></a>) defined as follows:</p>
 
 <p>First, in the special case that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>=</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>≃</mo><msup><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>)</mo></mrow> <mo>*</mo></msup></mrow><annotation encoding="application/x-tex">X = S^n \simeq \left( \mathbb{R}^n\right)^\ast</annotation></semantics></math> so that the space of sections</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>Γ</mi><mo>˜</mo></mover> <mi>X</mi></msub><mrow><mo>(</mo><msubsup><mi>S</mi> <mi>X</mi> <mrow><mi>T</mi><mi>X</mi></mrow></msubsup><msub><mo>∧</mo> <mi>X</mi></msub><mi>A</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>Γ</mi><mo>˜</mo></mover> <mi>X</mi></msub><mrow><mo>(</mo><msubsup><mi>S</mi> <mi>X</mi> <mrow><mi>T</mi><mi>X</mi></mrow></msubsup><msub><mo>∧</mo> <mi>X</mi></msub><mi>A</mi><mo>)</mo></mrow><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup><mo>∧</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">
   \widetilde \Gamma_X\left(
      S_X^{T X}\wedge_X A  
   \right)
   \;\simeq\;
-  \Omega^n S^n
+  \Omega^n S^n \wedge A
 
 </annotation></semantics></math></div>
 <p>is the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-fold <a class="existingWikiWord" href="/nlab/show/loop+space">loop space</a> of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere, consider the <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous function</a> out of the configuration space of disks (Def. <a class="maruku-ref" href="#ConfigurationSpaceOfDisks"></a>)</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mover><mo>⟵</mo><mo>≃</mo></mover><mi>DiskConf</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow></mrow></mover><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mover><mo>⟵</mo><mo>≃</mo></mover><mi>DiskConf</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mi>wrap</mi></mover><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">
   Conf(S^n,A)
   \overset{\simeq}{\longleftarrow}
   DiskConf(S^n,A)
-  \overset{  }{\longrightarrow}
+  \overset{ wrap }{\longrightarrow}
   \Omega^n S^n
 
 </annotation></semantics></math></div>
@@ -957,11 +957,13 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>takes the interior of embedded disks <a class="existingWikiWord" href="/nlab/show/homeomorphism">homeomorphically</a> to the <a class="existingWikiWord" href="/nlab/show/complement">complement</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup><mo>∖</mo><mo stretchy="false">{</mo><mo>*</mo><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">S^n \setminus \{\ast\}</annotation></semantics></math> of the basepoint.</p>
+<p>takes the interior of embedded disks <a class="existingWikiWord" href="/nlab/show/homeomorphism">homeomorphically</a> to the <a class="existingWikiWord" href="/nlab/show/complement">complement</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup><mo>∖</mo><mo stretchy="false">{</mo><mo>*</mo><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">S^n \setminus \{\ast\}</annotation></semantics></math> of the basepoint, keeping the label in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> at the center of the disk.</p>
 </li>
 </ol>
 
 <p>In words, this map identifies a ball-shaped neighbourhood of every point in a configuration of points with the coefficient sphere, the <a class="existingWikiWord" href="/nlab/show/boundary">boundary</a> of the neighbouthood mapping to the basepoint, and then glues all these identifications together at their common basepoint.</p>
+
+<p>Moreover, one observes that this map is a homomorphism of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-fold monoids (…). The <em>scanning map</em> itself is the image under group completion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi><mi>B</mi><mo stretchy="false">(</mo><mi>wrap</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Omega B(wrap)</annotation></semantics></math> of that.</p>
 
 <p>For general <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> the scanning map is locally like this, globalized in the evident way (…).</p>
 </div>
@@ -1257,7 +1259,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 31, 2018 at 05:45:33.
+  Last revised on October 31, 2018 at 06:17:06.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
