--- a/pages/19865.html
+++ b/pages/19865.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9180/#Item_39" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9180/#Item_41" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -464,6 +464,8 @@ margin-left: 0em;
 <ul>
 <li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><msub><mo>∼</mo> <mi>α</mi></msub><mi>x</mi></mrow><annotation encoding="application/x-tex">x \sim_{\alpha} x</annotation></semantics></math></li>
 
+<li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="monospace"><mi>C</mi></mstyle><mo stretchy="false">(</mo><msub><mi>M</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>M</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><msub><mo>∼</mo> <mi>α</mi></msub><mstyle mathvariant="monospace"><mi>C</mi></mstyle><mo stretchy="false">(</mo><mi>M</mi><msub><mo>′</mo> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><mi>M</mi><msub><mo>′</mo> <mi>n</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathtt{C}(M_1,\dots,M_n) \sim_{\alpha} \mathtt{C}(M'_1,\dots,M'_n)</annotation></semantics></math> if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mn>1</mn></msub><msub><mo>∼</mo> <mi>α</mi></msub><mi>M</mi><msub><mo>′</mo> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">M_1 \sim_{\alpha} M'_1</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>…</mi></mrow><annotation encoding="application/x-tex">\dots</annotation></semantics></math>, and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mi>n</mi></msub><msub><mo>∼</mo> <mi>α</mi></msub><mi>M</mi><msub><mo>′</mo> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">M_n \sim_{\alpha} M'_n</annotation></semantics></math></li>
+
 <li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi><mo stretchy="false">(</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo stretchy="false">)</mo><mo>.</mo><mi>B</mi><msub><mo>∼</mo> <mi>α</mi></msub><mi>Π</mi><mo stretchy="false">(</mo><mi>x</mi><mo>′</mo><mo>:</mo><mi>A</mi><mo>′</mo><mo stretchy="false">)</mo><mo>.</mo><mi>B</mi><mo>′</mo></mrow><annotation encoding="application/x-tex">\Pi(x:A).B \sim_{\alpha} \Pi(x':A').B'</annotation></semantics></math> if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><msub><mo>∼</mo> <mi>α</mi></msub><mi>A</mi><mo>′</mo></mrow><annotation encoding="application/x-tex">A \sim_{\alpha} A'</annotation></semantics></math> and for every <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>y</mi><mo>∉</mo><mi>FV</mi><mo stretchy="false">(</mo><mi>B</mi><mo stretchy="false">)</mo><mo>∪</mo><mi>FV</mi><mo stretchy="false">(</mo><mi>B</mi><mo>′</mo><mo stretchy="false">)</mo><mo>∪</mo><mo stretchy="false">{</mo><mi>x</mi><mo>,</mo><mi>x</mi><mo>′</mo><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">y \notin
 FV(B) \cup FV(B') \cup \{x,x'\}</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mo stretchy="false">[</mo><mi>y</mi><mo stretchy="false">/</mo><mi>x</mi><mo stretchy="false">]</mo><msub><mo>∼</mo> <mi>α</mi></msub><mi>B</mi><mo>′</mo><mo stretchy="false">[</mo><mi>y</mi><mo stretchy="false">/</mo><mi>x</mi><mo>′</mo><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">B[y/x] \sim_{\alpha} B'[y/x']</annotation></semantics></math></li>
 
@@ -500,7 +502,7 @@ FV(M) \cup FV(M') \cup \{x,x'\}</annotation></semantics></math>, <math xmlns="ht
 
 <div class="revisedby">
   <p>
-  Last revised on October 31, 2018 at 20:58:55.
+  Last revised on October 31, 2018 at 21:13:33.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Raw Syntax" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
